New folder structure

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,6 +6,10 @@
     {
       "path": "scss/index.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/app.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+    },
+    {
+      "path": "scss/app.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     }
   ],
   "fileTree": {
@@ -26,19 +30,41 @@
   },
   "imports": [
     {
-      "path": "scss/index.scss",
+      "path": "scss/app.scss",
       "imports": [
-        "scss/mixins.scss",
-        "scss/custom.scss",
-        "scss/app.scss",
-        "scss/buttons.scss",
-        "scss/forms-elements.scss",
-        "scss/helpers.scss"
+        "scss/general/index.scss",
+        "scss/specific/index.scss",
+        "scss/general/_settings.scss",
+        "scss/general/_custom.scss",
+        "scss/general/_buttons.scss",
+        "scss/general/_forms-elements.scss",
+        "scss/general/_helpers.scss",
+        "scss/specific/_header.scss",
+        "scss/specific/_footer.scss",
+        "scss/specific/_layout.scss",
+        "scss/general/_mixins.scss"
+      ]
+    },
+    {
+      "path": "scss/settings.scss",
+      "imports": [
+        "scss/mixins.scss"
+      ]
+    },
+    {
+      "path": "scss/general/_index.scss",
+      "imports": [
+        "scss/general/_settings.scss",
+        "scss/general/_custom.scss",
+        "scss/general/_buttons.scss",
+        "scss/general/_forms-elements.scss",
+        "scss/general/_helpers.scss",
+        "scss/general/_mixins.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
