--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,11 +1,15 @@
 {
-  "name": "Kitchensink",
+  "name": "kitchensink",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
     {
+      "path": "index.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+    },
+    {
       "path": "scss/index.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/app.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/app.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     },
     {
       "path": "scss/app.scss",
@@ -35,6 +39,7 @@
         "scss/general/index.scss",
         "scss/specific/index.scss",
         "scss/general/_settings.scss",
+        "scss/general/_grid.scss",
         "scss/general/_custom.scss",
         "scss/general/_buttons.scss",
         "scss/general/_forms-elements.scss",
@@ -46,20 +51,29 @@
       ]
     },
     {
-      "path": "scss/settings.scss",
+      "path": "scss/general/_settings.scss",
       "imports": [
-        "scss/mixins.scss"
+        "scss/general/_mixins.scss"
       ]
     },
     {
-      "path": "scss/general/_index.scss",
+      "path": "scss/general/index.scss",
       "imports": [
         "scss/general/_settings.scss",
+        "scss/general/_grid.scss",
         "scss/general/_custom.scss",
         "scss/general/_buttons.scss",
         "scss/general/_forms-elements.scss",
         "scss/general/_helpers.scss",
         "scss/general/_mixins.scss"
+      ]
+    },
+    {
+      "path": "scss/specific/index.scss",
+      "imports": [
+        "scss/specific/_header.scss",
+        "scss/specific/_footer.scss",
+        "scss/specific/_layout.scss"
       ]
     }
   ],
@@ -105,7 +119,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7879,
+    "port": 7897,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
@@ -271,7 +285,7 @@
     "colorRgba": true,
     "overflowWrap": true
   },
-  "file-type-typescript": "{\"compilers\":[\"typescript\",\"uglify-js\"]}",
+  "file-type-typescript": "{\"compilers\":[\"typescript\",\"uglify-js\"],\"autoCompile\":true,\"sourceMap\":false,\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"typescript\",\"ts\"],\"replaceSegmentsWith\":\"js\",\"relative\":\"\"},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"compiler-typescript\":{\"enabled\":true}}",
   "babel": {
     "useBabelRc": true,
     "presets": {
