--- a/prepros-6.config
+++ b/prepros-6.config
@@ -134,7 +134,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "settings"
   },
   "fileWatcher": {
     "enabled": true,
@@ -319,7 +319,7 @@
   "cssnext": {
     "customProperties": true,
     "applyRule": true,
-    "calc": false,
+    "calc": true,
     "nesting": true,
     "customMedia": true,
     "mediaQueriesRange": true,
