Separating out the grid file - wont compile within the library! WHY!

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -13,7 +13,7 @@
     },
     {
       "path": "scss/app.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false}}"
     },
     {
       "path": "custom.scss",
@@ -57,7 +57,7 @@
     },
     {
       "path": "scss/general/_grid.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false}}"
     },
     {
       "path": "scss/general/_mixins.scss",
@@ -70,11 +70,16 @@
     {
       "path": "scss/specific/index.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"}}"
+    },
+    {
+      "path": "scss/general/grid.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
-      "scss"
+      "scss",
+      "scss/general"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -95,7 +100,6 @@
         "scss/general/index.scss",
         "scss/specific/index.scss",
         "scss/general/_settings.scss",
-        "scss/general/_grid.scss",
         "scss/general/_custom.scss",
         "scss/general/_buttons.scss",
         "scss/general/_forms-elements.scss",
@@ -116,7 +120,6 @@
       "path": "scss/general/index.scss",
       "imports": [
         "scss/general/_settings.scss",
-        "scss/general/_grid.scss",
         "scss/general/_custom.scss",
         "scss/general/_buttons.scss",
         "scss/general/_forms-elements.scss",
@@ -134,7 +137,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "settings"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
