Grid now compiles!

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -13,7 +13,7 @@
     },
     {
       "path": "scss/app.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"}}"
     },
     {
       "path": "custom.scss",
@@ -57,7 +57,7 @@
     },
     {
       "path": "scss/general/_grid.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"}}"
     },
     {
       "path": "scss/general/_mixins.scss",
@@ -70,16 +70,11 @@
     {
       "path": "scss/specific/index.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"}}"
-    },
-    {
-      "path": "scss/general/grid.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
-      "scss",
-      "scss/general"
+      "scss"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -99,6 +94,7 @@
       "imports": [
         "scss/general/index.scss",
         "scss/specific/index.scss",
+        "scss/general/_grid.scss",
         "scss/general/_settings.scss",
         "scss/general/_custom.scss",
         "scss/general/_buttons.scss",
@@ -120,6 +116,7 @@
       "path": "scss/general/index.scss",
       "imports": [
         "scss/general/_settings.scss",
+        "scss/general/_grid.scss",
         "scss/general/_custom.scss",
         "scss/general/_buttons.scss",
         "scss/general/_forms-elements.scss",
@@ -137,7 +134,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
