--- a/prepros-6.config
+++ b/prepros-6.config
@@ -13,7 +13,7 @@
     },
     {
       "path": "scss/app.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false}}"
     },
     {
       "path": "custom.scss",
@@ -57,7 +57,7 @@
     },
     {
       "path": "scss/general/_grid.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false}}"
     },
     {
       "path": "scss/general/_mixins.scss",
@@ -70,11 +70,23 @@
     {
       "path": "scss/specific/index.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"}}"
+    },
+    {
+      "path": "scss/general/grid.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true}}"
+    },
+    {
+      "path": "assets/scss/app.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
-      "scss"
+      "scss",
+      "scss/general",
+      "assets",
+      "assets/scss",
+      "assets/scss/general"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -90,46 +102,46 @@
   },
   "imports": [
     {
-      "path": "scss/app.scss",
+      "path": "assets/scss/app.scss",
       "imports": [
-        "scss/general/index.scss",
-        "scss/specific/index.scss",
-        "scss/general/_grid.scss",
-        "scss/general/_settings.scss",
-        "scss/general/_custom.scss",
-        "scss/general/_buttons.scss",
-        "scss/general/_forms-elements.scss",
-        "scss/general/_helpers.scss",
-        "scss/specific/_header.scss",
-        "scss/specific/_footer.scss",
-        "scss/specific/_layout.scss",
-        "scss/general/_mixins.scss"
+        "assets/scss/general/index.scss",
+        "assets/scss/specific/index.scss",
+        "assets/scss/general/_grid.scss",
+        "assets/scss/general/_settings.scss",
+        "assets/scss/general/_custom.scss",
+        "assets/scss/general/_buttons.scss",
+        "assets/scss/general/_forms-elements.scss",
+        "assets/scss/general/_helpers.scss",
+        "assets/scss/specific/_header.scss",
+        "assets/scss/specific/_footer.scss",
+        "assets/scss/specific/_layout.scss",
+        "assets/scss/general/_mixins.scss"
       ]
     },
     {
-      "path": "scss/general/_settings.scss",
+      "path": "assets/scss/general/_settings.scss",
       "imports": [
-        "scss/general/_mixins.scss"
+        "assets/scss/general/_mixins.scss"
       ]
     },
     {
-      "path": "scss/general/index.scss",
+      "path": "assets/scss/general/index.scss",
       "imports": [
-        "scss/general/_settings.scss",
-        "scss/general/_grid.scss",
-        "scss/general/_custom.scss",
-        "scss/general/_buttons.scss",
-        "scss/general/_forms-elements.scss",
-        "scss/general/_helpers.scss",
-        "scss/general/_mixins.scss"
+        "assets/scss/general/_grid.scss",
+        "assets/scss/general/_settings.scss",
+        "assets/scss/general/_custom.scss",
+        "assets/scss/general/_buttons.scss",
+        "assets/scss/general/_forms-elements.scss",
+        "assets/scss/general/_helpers.scss",
+        "assets/scss/general/_mixins.scss"
       ]
     },
     {
-      "path": "scss/specific/index.scss",
+      "path": "assets/scss/specific/index.scss",
       "imports": [
-        "scss/specific/_header.scss",
-        "scss/specific/_footer.scss",
-        "scss/specific/_layout.scss"
+        "assets/scss/specific/_header.scss",
+        "assets/scss/specific/_footer.scss",
+        "assets/scss/specific/_layout.scss"
       ]
     }
   ],
