--- a/prepros-6.config
+++ b/prepros-6.config
@@ -13,7 +13,7 @@
     },
     {
       "path": "scss/app.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"}}"
     },
     {
       "path": "custom.scss",
@@ -57,7 +57,7 @@
     },
     {
       "path": "scss/general/_grid.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"}}"
     },
     {
       "path": "scss/general/_mixins.scss",
@@ -70,23 +70,13 @@
     {
       "path": "scss/specific/index.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"}}"
-    },
-    {
-      "path": "scss/general/grid.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true}}"
-    },
-    {
-      "path": "assets/scss/app.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":true}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "scss",
-      "scss/general",
       "assets",
-      "assets/scss",
-      "assets/scss/general"
+      "assets/scss"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
