--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "cattle-grid",
+  "name": "kitchensink",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
@@ -101,16 +101,43 @@
         "assets/scss/general/_custom.scss",
         "assets/scss/general/_buttons.scss",
         "assets/scss/general/_forms-elements.scss",
+        "assets/scss/general/_table.scss",
         "assets/scss/general/_helpers.scss",
         "assets/scss/specific/_header.scss",
         "assets/scss/specific/_footer.scss",
         "assets/scss/specific/_layout.scss",
         "assets/scss/general/_mixins.scss"
       ]
+    },
+    {
+      "path": "assets/scss/general/_settings.scss",
+      "imports": [
+        "assets/scss/general/_mixins.scss"
+      ]
+    },
+    {
+      "path": "assets/scss/general/index.scss",
+      "imports": [
+        "assets/scss/general/_grid.scss",
+        "assets/scss/general/_settings.scss",
+        "assets/scss/general/_custom.scss",
+        "assets/scss/general/_buttons.scss",
+        "assets/scss/general/_forms-elements.scss",
+        "assets/scss/general/_helpers.scss",
+        "assets/scss/general/_mixins.scss"
+      ]
+    },
+    {
+      "path": "assets/scss/specific/index.scss",
+      "imports": [
+        "assets/scss/specific/_header.scss",
+        "assets/scss/specific/_footer.scss",
+        "assets/scss/specific/_layout.scss"
+      ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
@@ -151,7 +178,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7900,
+    "port": 7897,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
