--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "kitchensink",
+  "name": "cattle-grid",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
@@ -108,36 +108,10 @@
         "assets/scss/specific/_layout.scss",
         "assets/scss/general/_mixins.scss"
       ]
-    },
-    {
-      "path": "assets/scss/general/_settings.scss",
-      "imports": [
-        "assets/scss/general/_mixins.scss"
-      ]
-    },
-    {
-      "path": "assets/scss/general/index.scss",
-      "imports": [
-        "assets/scss/general/_grid.scss",
-        "assets/scss/general/_settings.scss",
-        "assets/scss/general/_custom.scss",
-        "assets/scss/general/_buttons.scss",
-        "assets/scss/general/_forms-elements.scss",
-        "assets/scss/general/_helpers.scss",
-        "assets/scss/general/_mixins.scss"
-      ]
-    },
-    {
-      "path": "assets/scss/specific/index.scss",
-      "imports": [
-        "assets/scss/specific/_header.scss",
-        "assets/scss/specific/_footer.scss",
-        "assets/scss/specific/_layout.scss"
-      ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
@@ -178,7 +152,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7897,
+    "port": 7900,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
