Folder rename. Updated examples & Readme

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -94,19 +94,19 @@
     {
       "path": "assets/scss/app.scss",
       "imports": [
-        "assets/scss/general/index.scss",
-        "assets/scss/specific/index.scss",
-        "assets/scss/general/_grid.scss",
-        "assets/scss/general/_settings.scss",
-        "assets/scss/general/_custom.scss",
-        "assets/scss/general/_buttons.scss",
-        "assets/scss/general/_forms-elements.scss",
-        "assets/scss/general/_table.scss",
-        "assets/scss/general/_helpers.scss",
-        "assets/scss/specific/_header.scss",
-        "assets/scss/specific/_footer.scss",
-        "assets/scss/specific/_layout.scss",
-        "assets/scss/general/_mixins.scss"
+        "assets/scss/base/index.scss",
+        "assets/scss/site/index.scss",
+        "assets/scss/base/_grid.scss",
+        "assets/scss/base/_settings.scss",
+        "assets/scss/base/_custom.scss",
+        "assets/scss/base/_buttons.scss",
+        "assets/scss/base/_forms-elements.scss",
+        "assets/scss/base/_table.scss",
+        "assets/scss/base/_helpers.scss",
+        "assets/scss/site/_header.scss",
+        "assets/scss/site/_footer.scss",
+        "assets/scss/site/_layout.scss",
+        "assets/scss/base/_mixins.scss"
       ]
     }
   ],
