Shuffled structure for easy maintenance. Site Folder now has a specific setting file for basic crayola & set up config

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -97,6 +97,7 @@
         "assets/scss/base/index.scss",
         "assets/scss/site/index.scss",
         "assets/scss/base/_grid.scss",
+        "assets/scss/base/_alignment.scss",
         "assets/scss/base/_settings.scss",
         "assets/scss/base/_custom.scss",
         "assets/scss/base/_buttons.scss",
@@ -106,12 +107,13 @@
         "assets/scss/site/_header.scss",
         "assets/scss/site/_footer.scss",
         "assets/scss/site/_layout.scss",
+        "assets/scss/site/_settings.scss",
         "assets/scss/base/_mixins.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
