Forced rounded. Updated MQ's

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -96,9 +96,9 @@
       "imports": [
         "assets/scss/base/index.scss",
         "assets/scss/site/index.scss",
+        "assets/scss/base/_settings.scss",
         "assets/scss/base/_grid.scss",
         "assets/scss/base/_alignment.scss",
-        "assets/scss/base/_settings.scss",
         "assets/scss/base/_custom.scss",
         "assets/scss/base/_buttons.scss",
         "assets/scss/base/_forms-elements.scss",
@@ -107,8 +107,8 @@
         "assets/scss/site/_header.scss",
         "assets/scss/site/_footer.scss",
         "assets/scss/site/_layout.scss",
-        "assets/scss/base/_mixins.scss",
-        "assets/scss/site/_settings.scss"
+        "assets/scss/site/_config.scss",
+        "assets/scss/base/_mixins.scss"
       ]
     },
     {
@@ -149,7 +149,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
