*New* Side drawer housing menu navigation

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -104,6 +104,7 @@
         "assets/scss/base/_forms-elements.scss",
         "assets/scss/base/_table.scss",
         "assets/scss/base/_helpers.scss",
+        "assets/scss/base/_drawer.scss",
         "assets/scss/site/_header.scss",
         "assets/scss/site/_footer.scss",
         "assets/scss/site/_layout.scss",
