Tracking code added

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -150,7 +150,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
