--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,6 @@
-RewriteEngine On
-RewriteCond %{SERVER_PORT} 80
-RewriteRule ^(.*)$ https://www.usecattlegrid.com/$1 [R,L]
+# Canonical HTTPS/WWW
+<IfModule mod_rewrite.c>
+	RewriteCond %{HTTPS} off [OR]
+	RewriteCond %{HTTP_HOST} ^www\.usecattlegrid\.com [NC]
+	RewriteRule (.*) https://usecattlegrid.com/$1 [L,R=301]
+</IfModule>
