--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "kitchensink",
+  "name": "CattleGrid",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
@@ -102,6 +102,7 @@
         "assets/scss/base/_alignment.scss",
         "assets/scss/base/_custom.scss",
         "assets/scss/base/_buttons.scss",
+        "assets/scss/base/_badges.scss",
         "assets/scss/base/_forms-elements.scss",
         "assets/scss/base/_helpers.scss",
         "assets/scss/base/_table.scss",
@@ -111,46 +112,10 @@
         "assets/scss/base/_mixins.scss",
         "assets/scss/site/_config.scss"
       ]
-    },
-    {
-      "path": "assets/scss/base/_mixins.scss",
-      "imports": [
-        "assets/scss/site/_settings.scss"
-      ]
-    },
-    {
-      "path": "assets/scss/base/_settings.scss",
-      "imports": [
-        "assets/scss/base/_mixins.scss",
-        "assets/scss/site/_settings.scss"
-      ]
-    },
-    {
-      "path": "assets/scss/base/index.scss",
-      "imports": [
-        "assets/scss/base/_grid.scss",
-        "assets/scss/base/_alignment.scss",
-        "assets/scss/base/_settings.scss",
-        "assets/scss/base/_custom.scss",
-        "assets/scss/base/_buttons.scss",
-        "assets/scss/base/_forms-elements.scss",
-        "assets/scss/base/_table.scss",
-        "assets/scss/base/_helpers.scss",
-        "assets/scss/base/_mixins.scss",
-        "assets/scss/site/_settings.scss"
-      ]
-    },
-    {
-      "path": "assets/scss/site/index.scss",
-      "imports": [
-        "assets/scss/site/_header.scss",
-        "assets/scss/site/_footer.scss",
-        "assets/scss/site/_layout.scss"
-      ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
@@ -191,7 +156,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7900,
+    "port": 7901,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
