New loaders (static & dynamic) + clean up of naming convention. The arrangement of classes bothered me.

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -104,6 +104,7 @@
         "assets/scss/base/_buttons.scss",
         "assets/scss/base/_badges.scss",
         "assets/scss/base/_forms-elements.scss",
+        "assets/scss/base/_loaders.scss",
         "assets/scss/base/_helpers.scss",
         "assets/scss/base/_table.scss",
         "assets/scss/site/_header.scss",
@@ -151,7 +152,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
